--- a/public/impressum/index.html
+++ b/public/impressum/index.html
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="text-center text-gray-600 dark:text-gray-400 text-sm">
-                <p>Copyright © 2025 Moritz Wendt – Alle Rechte vorbehalten</p>
+                <p>Copyright © 2025-2026 Moritz Wendt</p>
             </div>
         </div>
     </footer>
