--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#0070f3">
         <meta name="description" content="Moritz Wendt Portfolio">
-        <link rel="icon" type="image/png" href="/assets/logob.png">
+        <link rel="icon" type="image/png" href="assets/logob.png">
         <link rel="stylesheet" href="build/tailwind.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
         <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
