--- a/public/datenschutz/index.html
+++ b/public/datenschutz/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="de" class="scroll-smooth">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#0070f3">
-    <meta name="description" content="Impressum - Moritz Wendt">
-    <link rel="stylesheet" href="../build/tailwind.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <title>Datenschutz | Moritz Wendt</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#0070f3">
+        <meta name="description" content="Datenschutz der Seite moritzwendt.de">
+        <link rel="icon" href="../assets/blacklogo.png" type="image/png">
+        <link rel="stylesheet" href="../build/tailwind.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+        <title>Datenschutz von Moritz Wendt</title>
 </head>
 
 <body class="flex flex-col min-h-screen font-sans text-gray-900 dark:text-white bg-white dark:bg-dark-background transition-colors duration-300">
