--- a/public/index.html
+++ b/public/index.html
@@ -199,30 +199,29 @@
                         </div>
                     </div>
                     <div class="relative w-full h-[500px] lg:h-[500px] flex items-center justify-center overflow-hidden hidden lg:flex">
-                        <!-- 3D Cube Container with Perspective -->
                         <div class="relative perspective-1000" style="perspective: 1000px;">
                             <div class="relative w-64 h-64 preserve-3d cube-container" style="transform-origin: center center;">
-                                <!-- Cube Face Front -->
+                                <!-- front -->
                                 <div class="absolute w-64 h-64 cube-face" style="transform: rotateY(0deg) translate3d(0, 0, 128px); transform-origin: center center;">
                                     <div class="w-full h-full bg-gradient-to-br from-primary via-blue-500 to-blue-600 opacity-95 border-2 border-primary/40 dark:border-primary/60 rounded-sm"></div>
                                 </div>
-                                <!-- Cube Face Back -->
+                                <!-- back -->
                                 <div class="absolute w-64 h-64 cube-face" style="transform: rotateY(180deg) translate3d(0, 0, 128px); transform-origin: center center;">
                                     <div class="w-full h-full bg-gradient-to-br from-blue-600 via-blue-500 to-primary opacity-95 border-2 border-primary/40 dark:border-primary/60 rounded-sm"></div>
                                 </div>
-                                <!-- Cube Face Right -->
+                                <!-- right -->
                                 <div class="absolute w-64 h-64 cube-face" style="transform: rotateY(90deg) translate3d(0, 0, 128px); transform-origin: center center;">
                                     <div class="w-full h-full bg-gradient-to-br from-blue-500 via-primary to-blue-600 opacity-95 border-2 border-primary/40 dark:border-primary/60 rounded-sm"></div>
                                 </div>
-                                <!-- Cube Face Left -->
+                                <!-- left -->
                                 <div class="absolute w-64 h-64 cube-face" style="transform: rotateY(-90deg) translate3d(0, 0, 128px); transform-origin: center center;">
                                     <div class="w-full h-full bg-gradient-to-br from-blue-600 via-primary to-blue-500 opacity-95 border-2 border-primary/40 dark:border-primary/60 rounded-sm"></div>
                                 </div>
-                                <!-- Cube Face Top -->
+                                <!-- top -->
                                 <div class="absolute w-64 h-64 cube-face" style="transform: rotateX(90deg) translate3d(0, 0, 128px); transform-origin: center center;">
                                     <div class="w-full h-full bg-gradient-to-br from-primary via-blue-500 to-blue-400 opacity-95 border-2 border-primary/40 dark:border-primary/60 rounded-sm"></div>
                                 </div>
-                                <!-- Cube Face Bottom -->
+                                <!-- bottom -->
                                 <div class="absolute w-64 h-64 cube-face" style="transform: rotateX(-90deg) translate3d(0, 0, 128px); transform-origin: center center;">
                                     <div class="w-full h-full bg-gradient-to-br from-blue-400 via-blue-500 to-primary opacity-95 border-2 border-primary/40 dark:border-primary/60 rounded-sm"></div>
                                 </div>
