--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
                 <nav class="flex justify-between items-center py-4">
                     <div class="flex items-center">
                         <span class="text-primary text-2xl ml-1">●</span>
-                        <span class="text-xl font-extrabold">M</span>
+                        <span class="text-xl font-extrabold">Moritz Wendt</span>
                     </div>
                     <ul class="hidden md:flex space-x-8">
                         <li>
