--- a/public/datenschutz/index.html
+++ b/public/datenschutz/index.html
@@ -24,17 +24,10 @@
                     </a>
                     <div class="flex items-center space-x-6">
                         <a href="../index.html" class="text-sm font-medium text-primary hover:underline">
-                            <i class="fa-solid fa-arrow-left mr-2"></i> Zurück zur Hauptseite </a>
-                        <div class="flex items-center space-x-4">
+                            <i class="fa-solid fa-arrow-left mr-1"></i> Zurück zur Hauptseite </a>
+                        <div class="flex items-center space-x-4" id="tToggle">
                             <button id="themeToggle">
                                 <i class="fa-solid fa-moon text-gray-600 dark:text-gray-400"></i>
-                            </button>
-                            <button class="md:hidden p-2" id="menuToggle">
-                                <div class="w-6 h-5 flex flex-col justify-between">
-                                    <span class="w-full h-0.5 bg-gray-600 dark:bg-gray-400"></span>
-                                    <span class="w-full h-0.5 bg-gray-600 dark:bg-gray-400"></span>
-                                    <span class="w-full h-0.5 bg-gray-600 dark:bg-gray-400"></span>
-                                </div>
                             </button>
                         </div>
                     </div>
